name:                 cql-io
version:              0.5
synopsis:             CQL client
stability:            experimental
license:              OtherLicense
license-file:         LICENSE
author:               Toralf Wittner
maintainer:           Toralf Wittner <tw@dtex.org>
copyright:            (c) 2014 Toralf Wittner
category:             Database
build-type:           Simple
cabal-version:        >= 1.10
extra-source-files:   README.md

description:
    CQL Client.

source-repository head
    type:             git
    location:         git@github.com:twittner/cql-io.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs
    ghc-prof-options: -prof -auto-all

    exposed-modules:
        Database.CQL.IO

    other-modules:
        Database.CQL.IO.Client
        Database.CQL.IO.Cache
        Database.CQL.IO.Types

    build-depends:
          base         == 4.*
        , bytestring   >= 0.10
        , containers   == 0.5.*
        , cql          == 2.*
        , exceptions   == 0.4.*
        , mtl          == 2.1.*
        , mwc-random   == 0.13.*
        , network      == 2.4.*
        , ex-pool      == 0.1.*
        , text         >= 0.11
        , time         >= 1.4
        , tagged       == 0.7.*
        , transformers == 0.3.*
