name:                 cql-io
version:              0.9.3
synopsis:             CQL client
stability:            experimental
license:              OtherLicense
license-file:         LICENSE
author:               Toralf Wittner
maintainer:           Toralf Wittner <tw@dtex.org>
copyright:            (c) 2014 Toralf Wittner
category:             Database
build-type:           Simple
cabal-version:        >= 1.10
extra-source-files:   README.md

description:
    CQL Client.

source-repository head
    type:             git
    location:         git@github.com:twittner/cql-io.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs
    ghc-prof-options: -prof -auto-all

    exposed-modules:
        Database.CQL.IO

    other-modules:
        Database.CQL.IO.Client
        Database.CQL.IO.Cluster.Discovery
        Database.CQL.IO.Cluster.Host
        Database.CQL.IO.Cluster.Policies
        Database.CQL.IO.Connection
        Database.CQL.IO.Hexdump
        Database.CQL.IO.Jobs
        Database.CQL.IO.Pool
        Database.CQL.IO.Protocol
        Database.CQL.IO.Settings
        Database.CQL.IO.Signal
        Database.CQL.IO.Sync
        Database.CQL.IO.Tickets
        Database.CQL.IO.Timeouts
        Database.CQL.IO.Types

    build-depends:
          async            == 2.0.*
        , auto-update      == 0.1.*
        , base             >= 4.7     && < 5.0
        , bytestring       >= 0.10    && < 1.0
        , containers       >= 0.5     && < 1.0
        , cql              == 3.0.*
        , exceptions       >= 0.4     && < 1.0
        , hashable         >= 1.2     && < 2.0
        , iproute          >= 1.3     && < 1.4
        , lens             >= 4.4     && < 4.5
        , mtl              >= 2.1     && < 2.3
        , mwc-random       >= 0.13    && < 0.14
        , network          >= 2.4     && < 3.0
        , retry            >= 0.5     && < 0.6
        , semigroups       >= 0.15    && < 0.16
        , stm              >= 2.4     && < 3.0
        , text             >= 0.11    && < 2.0
        , tinylog          >= 0.8     && < 0.11
        , time             >= 1.4     && < 2.0
        , transformers     >= 0.3     && < 0.5
        , uuid             >= 1.2.6   && < 2.0
        , vector           >= 0.10    && < 1.0
